--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
 
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.19'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
+
+    compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
